tests/ui/type-alias-impl-trait/different_defining_uses_never_type-3.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/different_defining_uses_never_type-3.rs:8:30
   |
LL |             let y: Tait<U> = 1i32;
   |                              ^^^^ expected `()`, got `i32`
   |
note: previous use here
  --> $DIR/different_defining_uses_never_type-3.rs:12:22
   |
LL |     let x: Tait<T> = ();
   |                      ^^

error: aborting due to previous error

